
2020-11-30  Ron Norman <rjn@inglenet.com>
	* common.c: rewrote cob_check_version as it did not work on some platforms

2020-11-26  Ron Norman <rjn@inglenet.com>
	* termio.c: Catch more table entries as repeated

2020-11-24  Ron Norman <rjn@inglenet.com>
	* termio.c: Improve field dump routines to look for duplicated data

2020-11-23  Ron Norman <rjn@inglenet.com>
	* common.h, move.c: Add cob_init_table 
	
2020-11-22  Ron Norman <rjn@inglenet.com>
	* common.c: set LIBC_FATAL_STDERR_ more hard coded 
	* fbdb.c: fix error in use of wrong record area
	* fextfh.c: use cob_cache_malloc instead of cob_strdup
	* fsqlxfd.c: If count_components > 1 then its a composite key

2020-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_init): skip initialization again if already done as
	  external callers may call it falsely again

2020-11-16  James K. Lowden  <jklowden@symas.com>

	* common.c (cob_init) [__GLIBC__]: set LIBC_FATAL_STDERR_ to prevent
	  glibc from writing stack traces to /dev/tty.

2020-11-13  James K. Lowden  <jklowden@symas.com>

	* common.c (cob_check_version): support 3-part version strings

2020-11-01  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: use cob_str_case_str instead of strcasestr

2020-10-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.h, common.c: external version defintion via new defines
	  __LIBCOB_VERSION, __LIBCOB_VERSION_MINOR, __LIBCOB_VERSION_PATCHLEVEL,
	  __LIBCOB_RELEASE and functions libcob_version, set_libcob_version to
	  query and/or compare these;
	  note: __LIBCOB_VERSION_PATCHLEVEL is _not_ the package's PATCHLEVEL 
	* common.c: extracted set_cob_build_stamp from print_version
	* common.c, common.h: new function print_version_summary providing a two line
	  output for GnuCOBOL + C compiler and used libraries
	* common.c (print_runtime_conf): additional output of LOCALEDIR

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* call.c, common.c: defaults.h removed